--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "build": "vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "update": "npm update --save && composer update && composer bump"
   },
   "prettier": {
     "tailwindStylesheet": "./resources/css/tailkit.css",
@@ -13,21 +14,21 @@
     ]
   },
   "devDependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@inertiajs/react": "^2.0.13",
+    "@headlessui/react": "^2.2.7",
+    "@inertiajs/react": "^2.0.17",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.10",
-    "@vitejs/plugin-react": "^4.6.0",
-    "axios": "^1.10.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vitejs/plugin-react": "^4.7.0",
+    "axios": "^1.11.0",
     "concurrently": "^9.2.0",
-    "laravel-vite-plugin": "^1.3.0",
-    "prettier": "^3.6.1",
+    "laravel-vite-plugin": "^2.0.0",
+    "prettier": "^3.6.2",
     "prettier-plugin-blade": "^2.1.21",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.6",
-    "vite": "^6.3.5"
+    "vite": "^7.0.6"
   }
 }
